# Tucil2_13523136

./: CMakeLists.txt  README.md
src/: Quadtree.cpp  Quadtree.hpp  interface.hpp  main.cpp
